bugfix: navigation was jumping when window width was changed feature: adding comments works
git-svn-id: http://svn.pulu.org/palsta/trunk@30 216ea19e-b572-44bf-bedd-0b0ba5757e72

--- a/src/Pulu/PalstaBundle/Resources/public/css/app.css
+++ b/src/Pulu/PalstaBundle/Resources/public/css/app.css
@@ -13,8 +13,9 @@
 /* -----------------------------------------
    Page layout
 ----------------------------------------- */
-body			{background: #CADAF2; margin: 2% 5%;}
-#main-contents		{border: 4px solid #285EAE; padding: 0 20px; background-color: #fff;}
+body			{background: #CADAF2;}
+#main-wrapper   {margin: 2% 4%;}
+#main-contents	{border: 4px solid #285EAE; padding: 0 20px; background-color: #fff;}
 #title			{font-size: 3.5em; font-weight: 600; font-family: Verdana; margin: 5px; padding: 0px; text-align: center; letter-spacing: 0.1em; line-height: 1em}
 #slogan			{font-family: Verdana; font-size: 1em; text-align: center;}
 #copyright		{text-align: right; font-size: 0.9em; margin: 1px -17px; font-family: Verdana}
@@ -30,7 +31,7 @@ ul#navigation a:hover,
 ul#about a:hover	{background: #E2B2E4;}
 ul#navigation li	{float: left;}
 ul#about li		{float: right;}
-#switch-language {position: absolute; top: 0px; right: 0px; font-size: 14px; line-height: 1.2em;}
+#switch-language {position: absolute; top: 10px; right: 0px; font-size: 14px; line-height: 1.2em;}
 
 .nowrap			{white-space: nowrap;}
 .wide           {width: 100%;}
