--- a/src/Pulu/PalstaBundle/Resources/public/css/foundation.css
+++ b/src/Pulu/PalstaBundle/Resources/public/css/foundation.css
@@ -58,7 +58,7 @@ h1 { font-size: 36px; color: #285EAE; }
 
 h2 { font-size: 29px; }
 
-h3 { font-size: 25px; }
+h3 { font-size: 24px; }
 
 h4 { font-size: 21px; }
 
